force-app/main/default/objects/Interview__c/fields/Candidate_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Event_Id__c</fullName>
    <label>Candidate Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>