force-app/main/default/objects/Interview__c/fields/Candidate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Phone__c</fullName>
    <label>Candidate Phone</label>
    <type>Phone</type>
</CustomField>