force-app/main/default/objects/Interview__c/fields/Disposition_Qualifiers__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Qualifiers__c</fullName>
    <label>Disposition Qualifiers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
            <value>
                <fullName>Accepted a different position</fullName>
            </value>
            <value>
                <fullName>Accepted position but never started</fullName>
            </value>
            <value>
                <fullName>Applied for position previously</fullName>
            </value>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Contract/Temp</fullName>
            </value>
            <value>
                <fullName>Distance was not favorable</fullName>
            </value>
            <value>
                <fullName>Does not qualify as a profession that we staff</fullName>
            </value>
            <value>
                <fullName>No longer interested in the position</fullName>
            </value>
            <value>
                <fullName>Not rehireable by Client</fullName>
            </value>
            <value>
                <fullName>Pay requested is too high</fullName>
            </value>
            <value>
                <fullName>PERM Acc</fullName>
            </value>
            <value>
                <fullName>Permanent-MIGRATE AS A PLACEMENT</fullName>
            </value>
            <value>
                <fullName>PERM INP</fullName>
            </value>
            <value>
                <fullName>PERM Res</fullName>
            </value>
            <value>
                <fullName>PERM Tel</fullName>
            </value>
            <value>
                <fullName>Position Closed</fullName>
            </value>
            <value>
                <fullName>TEMP ACC</fullName>
            </value>
            <value>
                <fullName>TEMP INP</fullName>
            </value>
            <value>
                <fullName>TEMP OFFER</fullName>
            </value>
            <value>
                <fullName>TEMP RES</fullName>
            </value>
            <value>
                <fullName>TEMP TEL</fullName>
            </value>
            <value>
                <fullName>T-OFF DECL</fullName>
            </value>
            <value>
                <fullName>T-OFF MADE</fullName>
            </value>
            <value>
                <fullName>Underqualified for position</fullName>
            </value>
            <value>
                <fullName>Unfavorable interview</fullName>
            </value>
            <value>
                <fullName>Unresponsive candidate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>