force-app/main/default/objects/Interview__c/fields/Event_Generated_Automatically_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Generated_Automatically_Id__c</fullName>
    <label>Event Generated Automatically Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>