force-app/main/default/objects/Interview__c/fields/Events_Generated__c.field-meta.xml
<CustomField>
    <fullName>Events_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Events Generated</label>
    <type>Checkbox</type>
</CustomField>