force-app/main/default/objects/Interview__c/fields/Feedback_Form_Hidden_URL__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Form_Hidden_URL__c</fullName>
    <formula>HYPERLINK(&apos;https://praxiomai-dev-ed.develop.my.salesforce-sites.com/&apos; &amp; &apos;Survey?id=&apos; &amp; Job_Num__c &amp; &apos;&amp;jaId=&apos; &amp; Job_Applicant__c &amp; &apos;&amp;intId=&apos; &amp; Id &amp; &apos;&amp;accessoryType=Interview Feedback Questionnaire&amp;hidden=true&apos;, &apos;Click_here&apos;, &apos; &apos;)</formula>
    <label>Feedback Form Hidden URL</label>
    <type>Text</type>
</CustomField>