force-app/main/default/objects/Interview__c/fields/Feedback_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Form_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback Form Submitted</label>
    <type>Checkbox</type>
</CustomField>