force-app/main/default/objects/Interview__c/fields/Feedback_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Form_URL__c</fullName>
    <formula>HYPERLINK(
  &quot;https://praxiomai-dev-ed.develop.my.salesforce-sites.com/Survey?id=&quot; &amp;
  Job_Num__c &amp;
  &quot;&amp;jaId=&quot; &amp; Job_Applicant__c &amp;
  &quot;&amp;intId=&quot; &amp; Id &amp;
  &quot;&amp;accessoryType=Interview Feedback Questionnaire&quot;,
  &quot;click_here&quot;, &quot; &quot;
)</formula>
    <label>Feedback Form URL</label>
    <type>Text</type>
</CustomField>