force-app/main/default/objects/Interview__c/fields/Feedback_Received__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if interviewer has submitted feedback</description>
    <label>Feedback Received</label>
    <type>Checkbox</type>
</CustomField>