force-app/main/default/objects/Interview__c/fields/Interview_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date_Time__c</fullName>
    <description>Scheduled date and time for the interview</description>
    <label>Interview Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>