force-app/main/default/objects/Interview__c/fields/Interview_Duration__c.field-meta.xml
<CustomField>
    <fullName>Interview_Duration__c</fullName>
    <description>Length of the interview</description>
    <label>Interview Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>