force-app/main/default/objects/Interview__c/fields/Interview_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Interview_Feedback__c</fullName>
    <description>Interviewer&apos;s notes and evaluation</description>
    <label>Interview Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>