force-app/main/default/objects/Interview__c/fields/Interview_Feedback_Form_Old__c.field-meta.xml
<CustomField>
    <fullName>Interview_Feedback_Form_Old__c</fullName>
    <formula>HYPERLINK(&apos;https://praxiomai-dev-ed.develop.my.salesforce-sites.com/&apos;
 &amp; &apos;Interview?Id=&apos; &amp; Id, &apos;Click_here&apos;)</formula>
    <label>Interview Feedback Form (Old)</label>
    <type>Text</type>
</CustomField>