force-app/main/default/objects/Interview__c/fields/Interview_Feedback_Old__c.field-meta.xml
<CustomField>
    <fullName>Interview_Feedback_Old__c</fullName>
    <label>Interview Feedback (Old)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>