force-app/main/default/objects/Interview__c/fields/Interview_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Interview_Outcome__c</fullName>
    <description>Passed, Failed, Pending Decision</description>
    <label>Interview Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Pending Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>