force-app/main/default/objects/Interview__c/fields/Interview_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Interview_Questionnaire__c</fullName>
    <formula>HYPERLINK(&apos;/apex/Survey?intId=&apos; &amp; Id &amp; &apos;&amp;id=&apos; &amp; Job_Num__c &amp; &apos;&amp;accessoryType=Interview Questionnaire&amp;edit=true&apos;, &apos;click_here&apos;, &apos; &apos;)</formula>
    <label>Interview Questionnaire</label>
    <type>Text</type>
</CustomField>