force-app/main/default/objects/Interview__c/fields/Interview_Recording__c.field-meta.xml
<CustomField>
    <fullName>Interview_Recording__c</fullName>
    <description>Link to recorded interview (if applicable)</description>
    <label>Interview Recording</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>