force-app/main/default/objects/Interview__c/fields/Interviewer_s__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_s__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person(s) conducting the interview</description>
    <label>Interviewer(s)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interviews (Interviewer(s))</relationshipLabel>
    <relationshipName>Interviews1</relationshipName>
    <type>Lookup</type>
</CustomField>