force-app/main/default/objects/Interview__c/fields/Interviewing_Person__c.field-meta.xml
<CustomField>
    <fullName>Interviewing_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewing Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interviews (Interviewing Person)</relationshipLabel>
    <relationshipName>Interviews2</relationshipName>
    <type>Lookup</type>
</CustomField>