force-app/main/default/objects/Interview__c/fields/Interviewing_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Interviewing_Person_Email__c</fullName>
    <label>Interviewing Person Email</label>
    <type>Email</type>
</CustomField>