force-app/main/default/objects/Interview__c/fields/Interviewing_Person_Event__c.field-meta.xml
<CustomField>
    <fullName>Interviewing_Person_Event__c</fullName>
    <label>Interviewing Person Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>