force-app/main/default/objects/Interview__c/fields/Job_Applicant_Stage__c.field-meta.xml
<CustomField>
    <fullName>Job_Applicant_Stage__c</fullName>
    <formula>TEXT( Job_Applicant__r.Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Applicant Stage</label>
    <type>Text</type>
</CustomField>