force-app/main/default/objects/Interview__c/fields/Job_Num__c.field-meta.xml
<CustomField>
    <fullName>Job_Num__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Num</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Interviews (Job Num)</relationshipLabel>
    <relationshipName>Interviews1</relationshipName>
    <type>Lookup</type>
</CustomField>