force-app/main/default/objects/Interview__c/fields/Length_of_Interview_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Interview_Minutes__c</fullName>
    <label>Length of Interview (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>