force-app/main/default/objects/Interview__c/fields/Location_Platform__c.field-meta.xml
<CustomField>
    <fullName>Location_Platform__c</fullName>
    <description>Physical address or virtual meeting platform link</description>
    <label>Location/Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>