force-app/main/default/objects/Interview__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>Schedule next interview, Offer, Reject, Hold</description>
    <label>Next Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>