force-app/main/default/objects/Interview__c/fields/Questionnaire_URL__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_URL__c</fullName>
    <formula>HYPERLINK(&apos;https://praxiomai-dev-ed.develop.my.salesforce-sites.com/&apos;
 &amp; &apos;Survey?id=&apos; &amp; Job_Num__c &amp; &apos;&amp;intId=&apos; &amp; Id &amp; &apos;&amp;jaId=&apos; &amp; Job_Applicant__c &amp; &apos;&amp;accessoryType=Interview Questionnaire&apos;, &apos;click_here&apos;, &apos; &apos;)</formula>
    <label>Questionnaire URL</label>
    <type>Text</type>
</CustomField>