force-app/main/default/objects/Interview__c/fields/Quick_Results_Comment__c.field-meta.xml
<CustomField>
    <fullName>Quick_Results_Comment__c</fullName>
    <label>Quick Results Comment</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>