force-app/main/default/objects/Interview__c/fields/Recommended_Hire_Old__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Hire_Old__c</fullName>
    <label>Recommended Hire (Old)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Champion Hire</fullName>
            </value>
            <value>
                <fullName>Support Hire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>