force-app/main/default/objects/Interview__c/fields/Special_Instructions_to_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions_to_Candidate__c</fullName>
    <label>Special Instructions to Candidate</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>