force-app/main/default/objects/Interview__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Submission record being interviewed</description>
    <label>Submission</label>
    <referenceTo>Submission__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>