force-app/main/default/objects/Interview__c/fields/Type_Of_Interview__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Interview__c</fullName>
    <label>Type Of Interview</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>