force-app/main/default/objects/Interview__c/recordTypes/Corporate_Interview.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Interview</fullName>
    <active>true</active>
    <label>Corporate Interview</label>
</RecordType>