force-app/main/default/objects/Interview__c/recordTypes/Staffing_Interview.recordType-meta.xml
<RecordType>
    <fullName>Staffing_Interview</fullName>
    <active>true</active>
    <label>Staffing Interview</label>
</RecordType>