force-app/main/default/objects/Interview__c/listViews/Candidate_hotlist_names.listView-meta.xml
<ListView>
    <fullName>Candidate_hotlist_names</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Candidate hotlist names</label>
</ListView>