force-app/main/default/objects/Interview__c/listViews/contact_hotlist_names.listView-meta.xml
<ListView>
    <fullName>contact_hotlist_names</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>contact hotlist names</label>
</ListView>