force-app/main/default/objects/Interview__c/listViews/This_Week.listView-meta.xml
<ListView>
    <fullName>This_Week</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Submission__c</columns>
    <columns>Interview_Date_Time__c</columns>
    <columns>Interview_Type__c</columns>
    <columns>Interview_Feedback__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Interview_Date_Time__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week</label>
</ListView>